--- a/src/Components/Dishes/Dishes.css
+++ b/src/Components/Dishes/Dishes.css
@@ -17,26 +17,34 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
+.title{
+   display: inline-flex; 
+   position: relative;
+   text-align: center;
+    height: 100px;
+    width: 1200px;
+    font-family: "Amatic SC", cursive;
+    color: red;
+    font-size: 65px;
+}
 
-
-.holds{
-    display: flex-box;
-    align-content: space-between;
+#holds{
+    display: inline-flex;
+   
+    width: 1200px;
+    justify-content: space-between;
 }
 
 
 .Dish{
-    display: flexbox;
+    float: right;
     align-content: center;
     justify-content: center;
-    float: right;
     height: 500px;
-    width: 260px;
+    width: 280px;
 
     padding: 25px 25px 25px 25px;
-    
-   
-    
+     
     
 }
 
@@ -54,8 +62,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
-
     height: 275px;
     width: 250px;
 }
