--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,24 +1,57 @@
-#navbar{
-    position: fixed;
-    background-color: white;
-    z-index: 1;
+/* latin */
+@font-face {
+    font-family: 'Kalam';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Kalam'), local('Kalam-Regular'), url(https://fonts.gstatic.com/s/kalam/v10/YA9dr0Wd4kDdMthROCc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+/* latin */
+@font-face {
+    font-family: 'Kalam';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local('Kalam Bold'), local('Kalam-Bold'), url(https://fonts.gstatic.com/s/kalam/v10/YA9Qr0Wd4kDdMtDqHTLMkiQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+
+
+
+#div{ 
+  display: flex;
+  flex-direction: row;
+  position: fixed; 
+  
+  background-color:  white;
+  white-space: nowrap;
+  z-index: 1;
+  align-self: auto;
+  width: auto;
+  
+  justify-content: space-between; 
+  list-style: none;  
+  white-space: nowrap;
+  height:60px;
+  text-align: center; 
+  padding: 15px;
 }
 
 
 
-ul{ 
-    
-    width: 1600px;
-    align-items: space-between;
-    
-}
-
-a{  
-    display: inline-flex;
+.group{ 
+    flex-basis: auto;
     background-image: url('https://i.ibb.co/xFympg5/bananaleaf.png');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 150px;
+    width: 310px;
+    font-family: 'Kalam', cursive ;
+    font-size: 30px;
     color: red;
-    padding: 16px 85px;
+    
   
 }
