--- a/src/Components/Dishes/Dishes.css
+++ b/src/Components/Dishes/Dishes.css
@@ -17,39 +17,45 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
-.title{
-   display: inline-flex; 
-   position: relative;
-   text-align: center;
-    height: 100px;
+
+.holds{
+    display: inline-block;
+    height: auto;
     
+}
+
+#body{
+    width: 1400px;
+}
+
+.title{ 
+   
+   text-align: center;
+    height: 190px;
+    width: auto;
     font-family: "Amatic SC", cursive;
     color: red;
     font-size: 65px;
 }
 
-#holds{
-    display: inline-flex;
-   
-   
-    justify-content: space-between;
-}
+
 
 
 .Dish{
+
     float: right;
     align-content: center;
     justify-content: center;
-    height: 500px;
-    width: 280px;
+    height: auto;
+    width: 220px;
 
-    padding: 25px 25px 25px 25px;
+    padding: 20px ;
      
     
 }
 
 .Dish-information {
-    height:100px;
+    height:autp;
     width: 255px;
     font-family: "Amatic SC", cursive;
     color: red;
@@ -57,7 +63,7 @@
 
 }
 
-#Img{
+#ImgFood{
    
     background-position: center;
     background-repeat: no-repeat;
@@ -72,4 +78,77 @@ h3 {
 
 p{
     font-size: 30px;
+}
+
+.box{
+ display: inline-flex;
+ width: 350px;
+ 
+}
+
+@media only screen and (max-width: 600px) {
+   
+
+    .holds{
+        display: flex;
+      
+        width: 1400px;
+        
+        justify-content: space-between;
+    }
+    
+    
+    
+    .title{
+       
+       
+       text-align: center;
+        height: 75px;
+        width: auto;
+        font-family: "Amatic SC", cursive;
+        color: red;
+        font-size: 35px;
+    }
+    
+    
+    
+    
+    .Dish{
+        
+        align-content: center;
+        justify-content: center;
+        height: 250px;
+        width: 140px;
+    
+        padding: 15px ;
+         
+        
+    }
+    
+    .Dish-information {
+        height:50px;
+        width: 125px;
+        font-family: "Amatic SC", cursive;
+        color: red;
+        text-align: center;
+    
+    }
+    
+    #Img{
+       
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 160px;
+        width: 200px;
+    }
+    
+    h3 {
+        font-size: 25px;
+    }
+    
+    p{
+        font-size: 25px;
+    }
+
 }
