--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -21,7 +21,7 @@
 
 
 
-#div{ 
+#navbar{ 
   display: flex;
   flex-direction: row;
   position: fixed; 
@@ -29,29 +29,73 @@
   background-color:  white;
   white-space: nowrap;
   z-index: 1;
-  align-self: auto;
-  width: auto;
+ width: 1400px;
   
-  justify-content: space-between; 
+  justify-content: space-evenly; 
   list-style: none;  
   white-space: nowrap;
   height:60px;
   text-align: center; 
-  padding: 15px;
+  padding: 8px;
 }
 
+.group{
+  
+  background-image: url('https://i.ibb.co/xFympg5/bananaleaf.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 150px;
+  width: 265px;
+}
 
-
-.group{ 
+a{ 
     flex-basis: auto;
-    background-image: url('https://i.ibb.co/xFympg5/bananaleaf.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 150px;
-    width: 310px;
+    
     font-family: 'Kalam', cursive ;
     font-size: 30px;
     color: red;
     
   
 }
+
+@media only screen and (max-width: 800px) {
+  #div{ 
+    display: flex;
+    flex-direction: column;
+    position: fixed; 
+    
+    background-color:  white;
+    white-space: nowrap;
+    z-index: 1;
+    align-self: auto;
+    width: auto;
+    
+    justify-content: space-between; 
+    list-style: none;  
+    white-space: nowrap;
+    height:60px;
+    text-align: left; 
+    
+  }
+
+
+  .group{
+    
+    
+    background-image: none;
+    
+    width: 310px;
+  }
+  
+  a{ 
+      flex-basis: auto;        
+      font-family: 'Kalam', cursive ;
+      font-size: 25px;
+      color: red;    
+  }
+
+
+  }
+
+
+ 
