fixing screen size max 800px

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,34 +1,42 @@
-/* latin */
-@font-face {
-    font-family: 'Kalam';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Kalam'), local('Kalam-Regular'), url(https://fonts.gstatic.com/s/kalam/v10/YA9dr0Wd4kDdMthROCc.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
 
-/* latin */
-@font-face {
-    font-family: 'Kalam';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: local('Kalam Bold'), local('Kalam-Bold'), url(https://fonts.gstatic.com/s/kalam/v10/YA9Qr0Wd4kDdMtDqHTLMkiQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-
-#imglogo{
-   padding-top: 70px;
-    height: 140px;
-    width: auto;
-}
 
   #header{
-    font-family: 'Kalam', cursive ;
-    font-size: 35px;
+    font-family: 'Amatic SC', cursive;
+    font-size: 50px;
     text-align: right;
-    color: red;
-    width: 1400px;
-    
+    color: white;
+     width: 1400px;
+    background-image: url('https://i.ibb.co/3rmQD2z/main-IMG-5056-718x404.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 70px;
+    height: 520px;
+
+  }
+
+  @media only screen and (max-width: 800px) {
+
+
+    #header{
+      font-family: 'Amatic SC', cursive;
+      font-size: 25px;
+      text-align: right;
+      color: white;
+       width: 800px;
+      background-image: url('https://i.ibb.co/3rmQD2z/main-IMG-5056-718x404.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding-top: 70px;
+      height: 400px;
+      
+  
+    }
+  h2{
+    display: flex;
+    width: 600px;
+    float: right;
+  }
+
   }
