--- a/src/Components/Dishes/Dishes.css
+++ b/src/Components/Dishes/Dishes.css
@@ -1,23 +1,3 @@
-/* latin-ext */
-@font-face {
-    font-family: 'Amatic SC';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Amatic SC Regular'), local('AmaticSC-Regular'), url(https://fonts.gstatic.com/s/amaticsc/v13/TUZyzwprpvBS1izr_vOEBOSfQZQ.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Amatic SC';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Amatic SC Regular'), local('AmaticSC-Regular'), url(https://fonts.gstatic.com/s/amaticsc/v13/TUZyzwprpvBS1izr_vOECuSf.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-
-
 .holds{
     display: inline-block;
     height: auto;
@@ -31,14 +11,16 @@
 .title{ 
    
    text-align: center;
-    height: 190px;
+    height: 175px;
     width: auto;
     font-family: "Amatic SC", cursive;
     color: red;
-    font-size: 65px;
+    font-size: 55px;
 }
 
-
+#MainDish{
+    height: 500px;
+}
 
 
 .Dish{
@@ -86,61 +68,64 @@ p{
  
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
    
-
     .holds{
-        display: flex;
-      
-        width: 1400px;
+        display: inline-block;
+        height: auto;
         
-        justify-content: space-between;
     }
     
+    #body{
+        float: right;
+        width: 600px;
+    }
     
-    
-    .title{
+    .title{ 
        
-       
-       text-align: center;
-        height: 75px;
-        width: auto;
+       text-align: right;
+        height: 175px;
+        width: 600px;
         font-family: "Amatic SC", cursive;
         color: red;
-        font-size: 35px;
+        font-size: 45px;
     }
     
-    
+    #MainDish{
+        height: 500px;
+    }
     
     
     .Dish{
-        
+    
+        float: right;
         align-content: center;
         justify-content: center;
-        height: 250px;
-        width: 140px;
-    
-        padding: 15px ;
+        height: auto;
+        width: 55px;
+        
+        padding: 5px ;
          
         
     }
     
     .Dish-information {
-        height:50px;
-        width: 125px;
+        
+        height: auto;
+        width: 45px;
         font-family: "Amatic SC", cursive;
         color: red;
         text-align: center;
     
     }
     
-    #Img{
+    #ImgFood{
        
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 160px;
-        width: 200px;
+        height: 250px;
+        width: 250px;
     }
     
     h3 {
@@ -150,5 +135,12 @@ p{
     p{
         font-size: 25px;
     }
-
+    
+    .box{
+     display: inline-flex;
+     overflow: visible;
+     width: 300px;
+     
+    }
+  
 }
