--- a/src/Components/Dishes/Dishes.css
+++ b/src/Components/Dishes/Dishes.css
@@ -46,7 +46,7 @@
 }
 
 #ImgFood{
-   
+    border-radius: 25%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -84,7 +84,7 @@ p{
     .title{ 
        
        text-align: right;
-        height: 175px;
+        height: 120px;
         width: 600px;
         font-family: "Amatic SC", cursive;
         color: red;
