--- a/src/Components/Dishes/Dishes.css
+++ b/src/Components/Dishes/Dishes.css
@@ -11,7 +11,7 @@
 .title{ 
    
    text-align: center;
-    height: 175px;
+    height: 50px;
     width: auto;
     font-family: "Amatic SC", cursive;
     color: red;
@@ -54,13 +54,14 @@
     width: 250px;
 }
 
-h3 {
-    font-size: 35px;
+.minHead{
+    font-size: 25px;
+    font-family: "Amatic SC", cursive;
+    color: red;
+    text-align: center;
 }
 
-p{
-    font-size: 30px;
-}
+
 
 .box{
  display: inline-flex;
